Added bower & npm packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kl.js",
+  "name": "kl.js",
   "version": "1.0.0",
   "description": "## Easy-to-use Javascript micro-framework for binding",
   "main": "kljs.js",
