--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "## Easy-to-use Javascript micro-framework for binding",
   "main": "kljs.js",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-uglify": "^2.0.1",
-    "pump": "^1.0.2",
     "browser-sync": "^2.18.8",
+    "browserify": "^14.1.0",
+    "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^3.1.5",
+    "gulp-uglify": "^2.0.1",
     "gulp-watch": "^4.3.11",
     "http-proxy-middleware": "^0.17.3",
-    "typescript": "^2.1.6"
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-browserify": "^5.1.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "pump": "^1.0.2",
+    "typescript": "^2.1.6",
+    "watchify": "^3.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && karma start"
   },
   "author": "Clément Lamoureux <clementlamoureux@gmail.com>",
   "license": "MIT"
